--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+p {
+  padding-top: 100px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
