--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -18,7 +18,7 @@ p {
 }
 
 .App-header {
-  background-color: #ff00d4;
+  background-color: #b1b1b1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
