--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap');
+
 .App {
   text-align: center;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  font-family: 'Roboto', sans-serif;
+  background-color: #11406A;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -42,13 +46,7 @@
   }
 }
 
-#watch {
-  width: 70px;
-  margin: 3% 0;
-  border-radius: 10;
-}
-
-#startstream {
+#startstream, #watch {
   width: 451px;
   height: 158px;
   margin: 3% 0;
