--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -8,18 +8,6 @@
   align-items: center;
   font-family: 'Roboto', sans-serif;
   background-color: #11406A;
-  font-family: 'Roboto', sans-serif;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -65,6 +53,7 @@
 .dropdown-menu {
     margin-left: 1rem;
     position: relative;
+    padding-right: 4px;
 }
 
 .dropdown-menu_container-links {
@@ -72,7 +61,6 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
-  
   background-color: white;
   padding: 2rem;
   position: absolute;
