--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap');
 
+
 .App {
+  height: 100%;
   text-align: center;
-  min-height: 1080px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -10,41 +11,6 @@
   font-family: 'Roboto', sans-serif;
   background-color: #11406A;
   font-family: 'Roboto', sans-serif;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #b1b1b1;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 #startstream, #watch {
