--- a/previs/src/styles.css
+++ b/previs/src/styles.css
@@ -6,12 +6,14 @@ video::-webkit-media-controls {
 
 .stream {
     display: flex;
-    height: 100%;
     width: 100%;
     flex-flow: row wrap;
+    margin: 0;
+    padding: 0;
 }
 
 #v1, #v2, #v3, #v4 {
+    max-height: 50%;
     object-fit: contain;
 }
 
@@ -22,14 +24,10 @@ video::-webkit-media-controls {
 }
 
 #topbar-ambulance {
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-}
-
-#topbar-ambulance p, button, form {
-    margin: 5px;
 }
 
 p {
@@ -38,9 +36,10 @@ p {
 }
 
 #controls {
-    width: 100%;
+    height: 10%;
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
 }
 
 #start-button {
