--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -2,8 +2,20 @@
 
 .App {
   font-family: 'Roboto', sans-serif;
-  background-color: #11406A;
   height: 100%;
+}
+
+.App {
+  color: var(--text-primary);
+  background-color: var(--background);
+  transition: all .5s;
+}
+button {
+  color: var(--text-primary);
+  background-color: var(--background);
+  border: 2px var(--text-primary) solid;
+  float: right;
+  transition: all .5s;
 }
 
 #startstream, #watch {
@@ -44,7 +56,7 @@ margin-top: 5px;
   min-width: 310px;
   border-radius: 5px;
   box-shadow: 0 0 5 rgba(0,0,0,0.2);
-  background-color: #16C29D;
+  background-color: var(--start-button-background);
   text-decoration: underline;
 }
 
