--- a/previs/src/styles.css
+++ b/previs/src/styles.css
@@ -4,7 +4,7 @@ video::-webkit-media-controls {
     width: 100%;
     }
 
-.stream {
+#stream {
     display: flex;
     width: 100%;
     height: 92%;
@@ -12,6 +12,11 @@ video::-webkit-media-controls {
     justify-content: center;
     margin: 0;
     padding: 0;
+}
+
+#stream video {
+  height: 46%;  
+  flex-grow: 1;
 }
 
 #v1, #v2, #v3, #v4 {
