--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -32,6 +32,8 @@ margin-top: 5px;
 #ambulance, #hospital {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   border: 2px solid black;
   width: 100%;
 }
@@ -74,3 +76,7 @@ margin-top: 5px;
 #v1:fullscreen, #v2:fullscreen, #v3:fullscreen, #v4:fullscreen {
   filter: var(--filter);
 }
+
+
+
+
