--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -18,7 +18,6 @@ button {
 }
 
 #startstream, #watch {
-
   border-radius: 10px;
   font-size: 50px;
   font-weight: bold;
@@ -29,13 +28,20 @@ button {
 margin-top: 5px;
 }
 
+#home {
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
 #ambulance, #hospital {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid black;
-  width: 100%;
+  text-align: center;
 }
 
 .dropdown-menu {
