--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -45,9 +45,8 @@ margin-top: 5px;
 }
 
 .dropdown-menu {
-    margin-left: 1rem;
     position: relative;
-    padding-right: 4px;
+    padding-right: 30px;
 }
 
 .dropdown-menu_container-links {
@@ -58,8 +57,8 @@ margin-top: 5px;
   background-color: white;
   padding: 2rem;
   position: absolute;
-  top: 42px;
-  right: -40px;
+  top: 37px;
+  right: -37px;
   border-radius: 5px;
   box-shadow: 0 0 5 rgba(0,0,0,0.2);
   background-color: var(--start-button-background);
@@ -81,6 +80,13 @@ margin-top: 5px;
 
 #v1:fullscreen, #v2:fullscreen, #v3:fullscreen, #v4:fullscreen {
   filter: var(--filter);
+}
+
+input {
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  margin-left: 10px;
 }
 
 
