--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -91,11 +91,80 @@ input {
 
 
 #callerid {
-  
+  text-align: center;
   border-radius: 10px;
   background-color: #F5751B;
-  padding: 1%;
+  height: 50px;
+  width: 200px;
 }
+
+#buttons {
+  background-color: #212121;
+  height: 100%;
+  width: 50%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#buttons button {
+  min-height: 50%;
+}
+
+/**
+ * ----------------------------------------
+ * animation pulsate-bck
+ * ----------------------------------------
+ */
+ @-webkit-keyframes pulsate-bck {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+@keyframes pulsate-bck {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+
+.answer-button {
+  background-color: var(--start-button-background);
+    border-radius: 10px;
+    border: 2px solid transparent;
+    font-size: 28px;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 200px;
+    -webkit-animation: pulsate-bck 0.5s ease-in-out infinite both;
+	        animation: pulsate-bck 0.5s ease-in-out infinite both;
+}
+
+
 
 
 
