--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -105,6 +105,18 @@ input {
 
 }
 
+#watchid {
+  background-color: #F5751B;
+  border-radius: 10px;
+  height: 50px;
+  width: 350px;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  color:#A1D58F
+  
+}
+
 .hodetelefoner {
   color: #fff;
   padding: 2%;
