--- a/previs/src/index.css
+++ b/previs/src/index.css
@@ -13,10 +13,10 @@ code {
 }
 
 :root {
-  --background: #146157;
+  --background: #232323;
   --text-primary: white;
-  --start-button-background: #16C29D;
-  --stop-button-background: #F22727;
+  --start-button-background: #028500;
+  --stop-button-background: #B30000;
   --toggle-background: white;
   --toggle-color: black;
    filter: brightness(1);
