--- a/previs/src/styles.css
+++ b/previs/src/styles.css
@@ -43,6 +43,7 @@ p {
 #controls {
     display: flex;
     height: 8%;
+    width: 98%;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
@@ -103,3 +104,23 @@ p {
     height: 50px;
     width: 200px;
 }
+
+#callerid {
+    text-align: center;
+    border-radius: 10px;
+    background-color: #F5751B;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    font-size: 28px;
+    height: 50px;
+    padding: 0 1%;
+    text-transform: uppercase;
+}  
+
+.hodetelefoner {
+    color: #fff;
+    padding: 2%;
+    font-size: 30px;
+  }
