--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -123,5 +123,31 @@ input {
   margin-left: 10px;
 }
 
+.extra-buttons {
+  background-color: #FFFFFF;
+  border-radius: 20px;
+  border: 2px solid transparent;
+  font-size: 28px;
+  font-family: 'Roboto', sans-serif;
+  color: black;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 200px;
+  cursor: pointer;
+}
+
+#extra-buttons {
+  background: rgba(233, 226, 226, 0.42);
+  border-radius: 20px;
+  height: 90%;
+  display: flex;
+  width: 420px;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
 
