--- a/previs/src/index.css
+++ b/previs/src/index.css
@@ -15,7 +15,7 @@ code {
 :root {
   --background: #212121;
   --text-primary: white;
-  --start-button-background: #16C29D;
+  --start-button-background: #028500;
   --stop-button-background: #F22727;
   --toggle-background: white;
   --toggle-color: black;
