--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -92,11 +92,13 @@ margin-top: 5px;
   padding: 2rem;
   position: absolute;
   top: 37px;
-  right: -37px;
+  right: -162px;
   border-radius: 5px;
   box-shadow: 0 0 5 rgba(0,0,0,0.2);
   background-color: var(--start-button-background);
   text-decoration: underline;
+  text-decoration-thickness: 1px;
+  width: 300px;
 }
 
 .dropdown-menu_container-links p {
@@ -106,6 +108,11 @@ margin-top: 5px;
 .dropdown-menu_container-links p a {
   text-decoration: none;
   color: white;
+}
+
+#start-button p {
+  margin: 2px 5px;
+  border: 0 0 1px 0 solid white;
 }
 
 .dropdown-menu_container-links p:hover {
