--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -208,6 +208,33 @@ video::backdrop {
   background-color: #212121;
 }
 
+#starthospital, #startambulance {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  margin-top: 20%;
+}
+
+#hospital-mirroring {
+  max-width: 100%;
+  max-height: 90%;
+  border: 2px solid white;
+}
+
+.mute-button {
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: #FFF;
+  color: black;
+  margin-left: 2%;
+}
+
+#mute-caller {
+  display: flex;
+}
+
 
 
 
