--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -249,9 +249,9 @@ input {
 #videoContainer-1:-webkit-full-screen #back, #videoContainer-2:-webkit-full-screen #back, #videoContainer-3:-webkit-full-screen #back  {
   display: block;
   background-color: #F5751B;
-  height: 50px;
-  width: 150px;
-  font-size: 28px;
+  height: 110px;
+  width: 240px;
+  font-size: 44px;
   color: #FFF;
   border-radius: 10px;
   border: 1px solid #F5751B;
@@ -299,6 +299,14 @@ video::backdrop {
 
 #mute-caller {
   display: flex;
+  margin-left: 5%;
+}
+
+#container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 #buttons {
