--- a/previs/src/index.css
+++ b/previs/src/index.css
@@ -16,7 +16,7 @@ code {
   --background: #232323;
   --text-primary: white;
   --start-button-background: #028500;
-  --stop-button-background: #F22727;
+  --stop-button-background: #B30000;
   --toggle-background: white;
   --toggle-color: black;
   filter: brightness(1);
