--- a/previs/src/styles.css
+++ b/previs/src/styles.css
@@ -31,7 +31,6 @@ video::-webkit-media-controls {
 }
 
 p {
-   margin: 2px;
    color: white;
 }
 
@@ -56,7 +55,7 @@ p {
     background-color: var(--start-button-background);
     border-radius: 10px;
     border: 2px solid transparent;
-    font-size: 20px;
+    font-size: 24px;
     font-family: 'Roboto', sans-serif;
     color: white;
     display: flex;
@@ -115,10 +114,11 @@ p {
 
 #callerid p {
     font-size: 18px;
+    color: black;
 }
 
 .hodetelefoner {
-    color: #fff;
+    color: black;
     padding: 2%;
     font-size: 30px;
 }
