--- a/previs/src/App.css
+++ b/previs/src/App.css
@@ -40,7 +40,8 @@ button {
   align-items: flex-start;
 }
 
-#startstream, #watch {
+#startstream,
+#watch {
   border-radius: 10px;
   font-size: 40px;
   font-weight: bold;
@@ -51,8 +52,9 @@ button {
   width: 200px;
 }
 
-#startstream p, #watch p {
-margin-top: 5px;
+#startstream p,
+#watch p {
+  margin-top: 5px;
 }
 
 #incoming-call {
@@ -77,7 +79,8 @@ margin-top: 5px;
   transition-duration: 0.4s;
 }
 
-#startstream:hover, #watch:hover {
+#startstream:hover,
+#watch:hover {
   transform: scale(1.05);
   transition-duration: 0.2s;
   filter: brightness(1.4);
@@ -141,7 +144,8 @@ header {
   color: #F5751B;
 }
 
-#hospital, #ambulance {
+#hospital,
+#ambulance {
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -150,8 +154,8 @@ header {
 }
 
 .dropdown-menu {
-    position: relative;
-    padding-right: 30px;
+  position: relative;
+  padding-right: 30px;
 }
 
 .dropdown-menu_container-links {
@@ -165,7 +169,7 @@ header {
   top: 37px;
   right: -162px;
   border-radius: 5px;
-  box-shadow: 0 0 5 rgba(0,0,0,0.2);
+  box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
   background-color: var(--start-button-background);
   text-decoration: underline;
   text-decoration-thickness: 1px;
@@ -190,7 +194,10 @@ header {
   transform: scale(1.1);
 }
 
-#v1:fullscreen, #v2:fullscreen, #v3:fullscreen, #v4:fullscreen {
+#v1:fullscreen,
+#v2:fullscreen,
+#v3:fullscreen,
+#v4:fullscreen {
   filter: brightness(1.3);
 }
 
@@ -227,19 +234,24 @@ input {
   align-items: center;
 }
 
-#videoContainer-1, #videoContainer-2, #videoContainer-3, #videoContainer-4 {
+#videoContainer-1,
+#videoContainer-2,
+#videoContainer-3,
+#videoContainer-4 {
   max-width: 50%;
   max-height: 50%;
   overflow: hidden;
   margin: 0;
 }
 
-#videoContainer-1:-webkit-full-screen, #videoContainer-2:-webkit-full-screen {
+#videoContainer-1:-webkit-full-screen,
+#videoContainer-2:-webkit-full-screen {
   width: 100%;
   height: 100%;
 }
 
-#videoContainer-1:-moz-full-screen, #videoContainer-2:-moz-full-screen {
+#videoContainer-1:-moz-full-screen,
+#videoContainer-2:-moz-full-screen {
   width: 100%;
   height: 100%;
 }
@@ -249,7 +261,9 @@ input {
   z-index: 10;
 }
 
-#videoContainer-1:-webkit-full-screen #back, #videoContainer-2:-webkit-full-screen #back, #videoContainer-3:-webkit-full-screen #back {
+#videoContainer-1:-webkit-full-screen #back,
+#videoContainer-2:-webkit-full-screen #back,
+#videoContainer-3:-webkit-full-screen #back {
   display: block;
   background-color: #F5751B;
   height: 110px;
@@ -267,7 +281,9 @@ input {
   cursor: pointer;
 }
 
-#videoContainer-1:-moz-full-screen #back, #videoContainer-2:-moz-full-screen #back, #videoContainer-3:-moz-full-screen #back {
+#videoContainer-1:-moz-full-screen #back,
+#videoContainer-2:-moz-full-screen #back,
+#videoContainer-3:-moz-full-screen #back {
   display: block;
   background-color: #F5751B;
   height: 110px;
@@ -285,17 +301,21 @@ input {
   cursor: pointer;
 }
 
-#videoContainer-1:-webkit-full-screen video, #videoContainer-2:-webkit-full-screen video {
+#videoContainer-1:-webkit-full-screen video,
+#videoContainer-2:-webkit-full-screen video {
   object-fit: cover;
   z-index: 0;
 }
 
-#videoContainer-1:-moz-full-screen video, #videoContainer-2:-moz-full-screen video {
+#videoContainer-1:-moz-full-screen video,
+#videoContainer-2:-moz-full-screen video {
   object-fit: cover;
   z-index: 0;
 }
 
-#videoContainer-1::backdrop, #videoContainer-2::backdrop, #videoContainer-3::backdrop {
+#videoContainer-1::backdrop,
+#videoContainer-2::backdrop,
+#videoContainer-3::backdrop {
   background-color: #212121;
 }
 
@@ -353,8 +373,7 @@ video:hover {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  color:#A1D58F
-  
+  color: #A1D58F
 }
 
 .hodetelefoner {
@@ -362,6 +381,7 @@ video:hover {
   padding: 2%;
   font-size: 30px;
 }
+
 #buttons button {
   min-height: 50%;
   background-color: var(--start-button-background);
@@ -383,51 +403,56 @@ video:hover {
  * animation pulsate-bck
  * ----------------------------------------
  */
- @-webkit-keyframes pulsate-bck {
+@-webkit-keyframes pulsate-bck {
   0% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
+
   50% {
     -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+    transform: scale(0.9);
   }
+
   100% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
+
 @keyframes pulsate-bck {
   0% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
+
   50% {
     -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+    transform: scale(0.9);
   }
+
   100% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
 
 .answer-button {
   background-color: var(--start-button-background);
-    border-radius: 10px;
-    border: 2px solid transparent;
-    font-size: 28px;
-    font-family: 'Roboto', sans-serif;
-    color: white;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    width: 200px;
-    -webkit-animation: pulsate-bck 0.5s ease-in-out infinite both;
-	  animation: pulsate-bck 0.5s ease-in-out infinite both;
-	  animation: pulsate-bck 0.5s ease-in-out infinite both;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  font-size: 28px;
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 200px;
+  -webkit-animation: pulsate-bck 0.5s ease-in-out infinite both;
+  animation: pulsate-bck 0.5s ease-in-out infinite both;
+  animation: pulsate-bck 0.5s ease-in-out infinite both;
 }
 
 :not(:root):fullscreen {
@@ -479,6 +504,7 @@ video:hover {
   width: 80px;
   height: 80px;
 }
+
 #spinner:after {
   content: " ";
   display: block;
@@ -490,21 +516,18 @@ video:hover {
   border-color: #fff transparent #fff transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
+
 @keyframes lds-dual-ring {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
 
-.animate__animated  {
-  animation: animate__pulse 1.5s linear infinite; /* don't forget to set a duration! */
+.animate__animated {
+  animation: animate__pulse 1.5s linear infinite;
+  /* don't forget to set a duration! */
 }
-
-
-
-
-
-
